Divider added to one of the recyclerviews as a test, looks good. On click listeners working for stats home recyclerview, need to work on StatsExerciseActivity to show the correct exercises. Also need to set onclicklisteners to these and bring to the new recyclerview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".routines.RoutinesActivity"/>
         <activity android:name=".stats.StatsActivity"/>
+        <activity android:name=".stats.StatsExerciseActivity"/>
         <activity android:name=".NavigationActivity">
         </activity>
 
