New stats options recyclerview set, also titles of clicked on muscle groups passed as parcelable into StatsExerciseActivity and set as the title. Next step is to work on only showing exercises with the correct muscle group

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".routines.RoutinesActivity"/>
         <activity android:name=".stats.StatsActivity"/>
         <activity android:name=".stats.StatsExerciseActivity"/>
+        <activity android:name=".stats.StatsOptionsActivity"/>
         <activity android:name=".NavigationActivity">
         </activity>
 
