History now working. Plus home activity and history now showing recyclerviews in reverse order

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".stats.StatsActivity"/>
         <activity android:name=".stats.StatsExerciseActivity"/>
         <activity android:name=".stats.StatsOptionsActivity"/>
+        <activity android:name=".stats.StatsHistoryActivity"/>
         <activity android:name=".NavigationActivity">
         </activity>
 
