--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".NavigationActivity"/>
         <activity android:name=".stats.StatsMusclesActivity"/>
         <activity android:name=".stats.Stats1rmActivity"/>
+        <activity android:name=".stats.StatsBodyweightActivity"/>
     </application>
 
 </manifest>
