--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".stats.StatsMusclesActivity"/>
         <activity android:name=".stats.Stats1rmActivity"/>
         <activity android:name=".stats.StatsBodyweightActivity"/>
+        <activity android:name=".stats.StatsAddBodyweightActivity"/>
     </application>
 
 </manifest>
