Bodyweight linechart working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".stats.Stats1rmActivity"/>
         <activity android:name=".stats.StatsBodyweightActivity"/>
         <activity android:name=".stats.StatsAddBodyweightActivity"/>
+        <activity android:name=".stats.StatsBodyweightStatActivity"/>
     </application>
 
 </manifest>
