A bit more of routines setup but its a mess

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name=".stats.StatsMeasurementsActivity"/>
         <activity android:name=".stats.StatsAddMeasurementActivity"/>
         <activity android:name=".stats.StatsMeasurementsStatActivity"/>
+        <activity android:name=".routines.RoutineLogActivity"/>
+        <activity android:name=".routines.RoutinesAddExerciseActivity"/>
     </application>
 
 </manifest>
