Routines now able to add new exercises, delete exercises, and parcelable all set up. Next step is bring the contents of routine to a new ExerciseLogListActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".stats.StatsMeasurementsStatActivity"/>
         <activity android:name=".routines.RoutineLogActivity"/>
         <activity android:name=".routines.RoutinesAddExerciseActivity"/>
+        <activity android:name=".routines.RoutineNewExerciseActivity"/>
     </application>
 
 </manifest>
