Routines basically done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <activity android:name=".routines.RoutineLogActivity"/>
         <activity android:name=".routines.RoutinesAddExerciseActivity"/>
         <activity android:name=".routines.RoutineNewExerciseActivity"/>
+        <activity android:name=".routines.RoutineExerciseLogListActivity"/>
+        <activity android:name=".routines.RoutineExerciseActivity"/>
     </application>
 
 </manifest>
